feat: :zap: Create file security for conection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,29 +15,29 @@ spring.security.user.roles=USER
 # DataBase UserService
 spring.datasource.url=jdbc:mysql://localhost:3306/UserService?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DataBase PropertyService
 spring.datasource.propertyService.url=jdbc:mysql://localhost:3306/PropertyService?useSSL=false&serverTimezone=UTC
 spring.datasource.propertyService.username=root
-spring.datasource.propertyService.password=123456
+spring.datasource.propertyService.password=admin123
 spring.datasource.propertyService.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DataBase ReservationService
 spring.datasource.reservationService.url=jdbc:mysql://localhost:3306/ReservationService?useSSL=false&serverTimezone=UTC
 spring.datasource.reservationService.username=root
-spring.datasource.reservationService.password=123456
+spring.datasource.reservationService.password=admin123
 spring.datasource.reservationService.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DataBase BillingService
 spring.datasource.billingService.url=jdbc:mysql://localhost:3306/BillingService?useSSL=false&serverTimezone=UTC
 spring.datasource.billingService.username=root
-spring.datasource.billingService.password=123456
+spring.datasource.billingService.password=admin123
 spring.datasource.billingService.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DatBase AuthService
 spring.datasource.authService.url=jdbc:mysql://localhost:3306/AuthService?useSSL=false&serverTimezone=UTC
 spring.datasource.authService.username=root
-spring.datasource.authService.password=123456
+spring.datasource.authService.password=admin123
 spring.datasource.authService.driver-class-name=com.mysql.cj.jdbc.Driver
