--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,9 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+### Node Modules ###
+.env
+node_modules
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +29,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
