--- a/BackEnd/Properties/update_property/dockerfile
+++ b/BackEnd/Properties/update_property/dockerfile
@@ -1,18 +1,21 @@
-# Use a Node.js base image
-FROM node:18
+# Usa la misma versión de Go que en go.mod
+FROM golang:1.21 AS builder
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy the application files
-COPY package.json package-lock.json ./
-RUN npm install
+# Copiar solo go.mod y go.sum primero para aprovechar la caché
+COPY go.mod go.sum ./
 
-# Copy the application files
+RUN go mod download
+
+# Copiar el resto de los archivos
 COPY . .
 
-# Expose the port on which the microservice runs
-EXPOSE 3003  
+# Compilar la aplicación
+RUN go build -o main .
 
-# Command to start the application
-CMD ["node", "index.js"]
+# Imagen final
+FROM alpine:latest
+WORKDIR /root/
+COPY --from=builder /app/main .
+CMD ["./main"]
