--- a/.github/workflows/readproperty_test.yaml
+++ b/.github/workflows/readproperty_test.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.EC2_HOST_READPROPERTY }}  
+          host: ${{ secrets.EC2_HOST_READPROPERTY_TEST }}  
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
