--- a/.github/workflows/readproperty_test.yaml
+++ b/.github/workflows/readproperty_test.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./BackEnd  
+          context: ./BackEnd/Properties/read_property  
           file: ./BackEnd/Properties/read_property/Dockerfile  
           push: true
           tags: ksrobalino/microservicio-read-property:latest  
@@ -50,7 +50,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-           
+          
             if ! command -v docker &> /dev/null; then
               echo "Instalando Docker..."
               sudo yum update -y
@@ -66,7 +66,7 @@ jobs:
             sudo docker stop microservicio-read-property || true
             sudo docker rm microservicio-read-property || true
 
-           
+            
             echo "DB_HOST=database-users.cge22i1wn4cz.us-east-1.rds.amazonaws.com" > .env
             echo "DB_USER=admin" >> .env
             echo "DB_PASSWORD=Narusenin123" >> .env
@@ -74,8 +74,8 @@ jobs:
             echo "DB_PORT=3306" >> .env
             echo "PORT=3002" >> .env  
 
-      
+        
             sudo docker pull ksrobalino/microservicio-read-property:latest  
 
-    
-            sudo docker run -d --name microservicio-read-property --env-file .env -p 3002:3002 ksrobalino/microservicio-read-property:latest 
+          
+            sudo docker run -d --name microservicio-read-property --env-file .env -p 3002:3002 ksrobalino/microservicio-read-property:latest
