--- a/BackEnd/Comments/package.json
+++ b/BackEnd/Comments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "comments",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,14 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "amqplib": "^0.10.5",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.12.0"
+    "mongoose": "^8.10.0"
   }
 }
