docs: :zap: Creates readme.md

--- a/BackEnd/Reservations/read_reservation/.env
+++ b/BackEnd/Reservations/read_reservation/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD='admin123'
+DB_HOST=database-users.cge22i1wn4cz.us-east-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=Narusenin123
 DB_NAME=ReservationServices
 DB_PORT=3306
 PORT=4002
