--- a/BackEnd/BillingService/read_invoice/.env
+++ b/BackEnd/BillingService/read_invoice/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD='admin123'
+DB_HOST=database-users.cge22i1wn4cz.us-east-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=Narusenin123
 DB_NAME=BillingServices
 PORT=5002
