--- a/BackEnd/Properties/update_property/.env
+++ b/BackEnd/Properties/update_property/.env
@@ -1,5 +1,5 @@
-DB_USER=root
-DB_PASSWORD='admin123'
-DB_HOST=localhost
+DB_HOST=basemysql.c0koula3al44.us-east-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=Ksrobalino123
 DB_PORT=3306
 DB_NAME=PropertyServices
