--- a/BackEnd/Reservations/delete_reservation/.env
+++ b/BackEnd/Reservations/delete_reservation/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD='admin123'
+DB_HOST=basemysql.c0koula3al44.us-east-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=Ksrobalino123
 DB_NAME=ReservationServices
 DB_PORT=3306
 PORT=4004
