--- a/.github/workflows/read_owner.yaml
+++ b/.github/workflows/read_owner.yaml
@@ -67,9 +67,9 @@ jobs:
             sudo docker rm microservicio-read-owner || true
 
       
-            echo "DB_HOST=database-users.cge22i1wn4cz.us-east-1.rds.amazonaws.com" > .env
+            echo "DB_HOST=basemysql.c0koula3al44.us-east-1.rds.amazonaws.com" > .env
             echo "DB_USER=admin" >> .env
-            echo "DB_PASSWORD=Narusenin123" >> .env
+            echo "DB_PASSWORD=Ksrobalino123" >> .env
             echo "DB_NAME=OwnerService" >> .env  
             echo "DB_PORT=3306" >> .env
             echo "PORT=7002" >> .env 
