--- a/.github/workflows/readproperty_test.yaml
+++ b/.github/workflows/readproperty_test.yaml
@@ -50,7 +50,6 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-          
             if ! command -v docker &> /dev/null; then
               echo "Instalando Docker..."
               sudo yum update -y
@@ -62,19 +61,16 @@ jobs:
               echo "Docker ya está instalado."
             fi
 
-           
             sudo docker stop microservicio-read-property || true
             sudo docker rm microservicio-read-property || true
-
 
             echo "DB_HOST=basemysql.c0koula3al44.us-east-1.rds.amazonaws.com" > .env
             echo "DB_USER=admin" >> .env
             echo "DB_PASSWORD=Ksrobalino123" >> .env
             echo "DB_NAME=PropertyService" >> .env  
-           
+            echo "DB_PORT=3306" >> .env
+            echo "PORT=3002" >> .env  
 
-        
             sudo docker pull ksrobalino/microservicio-read-property:latest  
 
-          
             sudo docker run -d --name microservicio-read-property --env-file .env -p 3002:3002 ksrobalino/microservicio-read-property:latest
