--- a/BackEnd/Payments/payments_details/dockerfile
+++ b/BackEnd/Payments/payments_details/dockerfile
@@ -16,5 +16,5 @@ COPY . .
 # Expone el puerto (ajusta el puerto según tu microservicio)
 EXPOSE 9003
 
-# Comando para ejecutar la aplicación (ajusta el archivo de entrada)
-CMD ["node", "server.js"]
+# Comando para ejecutar la aplicación (usa index.js como archivo de entrada)
+CMD ["node", "index.js"]
