--- a/.github/workflows/test_payments.yaml
+++ b/.github/workflows/test_payments.yaml
@@ -1,4 +1,4 @@
-name: Deploy Payments Microservice to EC2
+name: Deploy Payments Microservices to EC2
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - Test2  # Cambia esto por la rama que deseas usar para el despliegue
 
 jobs:
-  build_and_push_image:
-    name: Build and Push Docker Image
+  build_and_push_images:
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +23,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push Generate Payments Microservice
+        uses: docker/build-push-action@v5
+        with:
+          context: ./BackEnd/Payments/generate_payments  # Ruta al microservicio
+          file: ./BackEnd/Payments/generate_payments/Dockerfile  # Ruta al Dockerfile
+          push: true
+          tags: ksrobalino/generate_payments:latest  # Nombre de la imagen en Docker Hub
+
+      - name: Build and push Payments Details Microservice
         uses: docker/build-push-action@v5
         with:
           context: ./BackEnd/Payments/payments_details  # Ruta al microservicio
@@ -32,9 +40,9 @@ jobs:
           tags: ksrobalino/payments_details:latest  # Nombre de la imagen en Docker Hub
 
   deploy_to_ec2:
-    name: Deploy Docker Container to EC2
+    name: Deploy Docker Containers to EC2
     runs-on: ubuntu-latest
-    needs: build_and_push_image
+    needs: build_and_push_images
 
     steps:
       - name: Set up SSH key
@@ -45,7 +53,7 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.EC2_HOST_PAYMENTS_DETAILS }}  # Host de la instancia EC2
+          host: ${{ secrets.EC2_HOST_PAYMENTS }}  # Host de la instancia EC2
           username: ec2-user  # Usuario de la instancia EC2
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
@@ -61,20 +69,21 @@ jobs:
               echo "Docker ya está instalado."
             fi
 
-            # Detener y eliminar el contenedor si ya existe
-            sudo docker stop payments_details || true
-            sudo docker rm payments_details || true
-
             # Crear el archivo .env con las variables de entorno
             echo "DB_HOST=dbpostgres.c0koula3al44.us-east-1.rds.amazonaws.com" > .env
             echo "DB_USER=admin123" >> .env
             echo "DB_PASSWORD=Ksrobalino123" >> .env
             echo "DB_NAME=postgres" >> .env
             echo "DB_PORT=5432" >> .env
-            echo "PORT=9003" >> .env
 
-            # Pull de la imagen de Docker Hub
+            # Detener y eliminar los contenedores si ya existen
+            sudo docker stop generate_payments payments_details || true
+            sudo docker rm generate_payments payments_details || true
+
+            # Pull de las imágenes de Docker Hub
+            sudo docker pull ksrobalino/generate_payments:latest
             sudo docker pull ksrobalino/payments_details:latest
 
-            # Ejecutar el contenedor
+            # Ejecutar los contenedores
+            sudo docker run -d --name generate_payments --env-file .env -p 9002:9002 ksrobalino/generate_payments:latest
             sudo docker run -d --name payments_details --env-file .env -p 9003:9003 ksrobalino/payments_details:latest
