--- a/BackEnd/Reservations/read_reservation/dockerfile
+++ b/BackEnd/Reservations/read_reservation/dockerfile
@@ -11,7 +11,7 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 # Copia solo la carpeta del servicio que necesitas
-COPY Reservations/read_reservation/ ./
+COPY . ./
 
 # Expone el puerto
 EXPOSE 4002
