--- a/.github/workflows/test_authentication.yaml
+++ b/.github/workflows/test_authentication.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.EC2_HOST_AUTHSERVICE }}  
+          host: ${{ secrets.EC2_HOST_AUTHSERVICE_TEST }}  
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
