--- a/.github/workflows/test_frontend.yaml
+++ b/.github/workflows/test_frontend.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.EC2_HOST_FRONTEND }}  
+          host: ${{ secrets.EC2_HOST_FRONTEND_TEST }}  
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
