--- a/BackEnd/Payments/payments_details/dockerfile
+++ b/BackEnd/Payments/payments_details/dockerfile
@@ -14,7 +14,7 @@ RUN npm ci
 COPY . .
 
 # Expone el puerto en el que la aplicación escucha (8000 en tu caso)
-EXPOSE 8000
+EXPOSE 9003
 
 # Comando para ejecutar la aplicación
-CMD ["node", "app.js"]
+CMD ["node", "index.js"]
