--- a/.github/workflows/main_authentication.yaml
+++ b/.github/workflows/main_authentication.yaml
@@ -1,13 +1,13 @@
-name: Deploy AuthService to EC2
+name: Deploy AuthServices to EC2
 
 on:
   push:
     branches:
-      - Test2
+      - main  
 
 jobs:
-  build_and_push_image:
-    name: Build and Push Docker Image
+  build_and_push_images:
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +23,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push AuthService Owners
         uses: docker/build-push-action@v5
         with:
           context: ./BackEnd/AuthService_owners  
@@ -31,10 +31,18 @@ jobs:
           push: true
           tags: ksrobalino/microservicio-auth-owners:latest  
 
+      - name: Build and push AuthService Student
+        uses: docker/build-push-action@v5
+        with:
+          context: ./BackEnd/AuthService_student  
+          file: ./BackEnd/AuthService_student/Dockerfile  
+          push: true
+          tags: ksrobalino/microservicio-auth-students:latest  
+
   deploy_to_ec2:
-    name: Deploy Docker Container to EC2
+    name: Deploy Docker Containers to EC2
     runs-on: ubuntu-latest
-    needs: build_and_push_image
+    needs: build_and_push_images
 
     steps:
       - name: Set up SSH key
@@ -45,7 +53,7 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.EC2_HOST_AUTHSERVICE }}  
+          host: ${{ secrets.EC2_HOST_AUTHSERVICE_MAIN }}  
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
@@ -61,18 +69,22 @@ jobs:
               echo "Docker ya está instalado."
             fi
 
-            sudo docker stop microservicio-auth-owners || true
-            sudo docker rm microservicio-auth-owners || true
+            
+            sudo docker stop microservicio-auth-owners microservicio-auth-students || true
+            sudo docker rm microservicio-auth-owners microservicio-auth-students || true
 
-            # Crear el archivo .env
+            
             echo "DB_HOST=basemysql.c0koula3al44.us-east-1.rds.amazonaws.com" > .env
             echo "DB_USER=admin" >> .env
             echo "DB_PASSWORD=Ksrobalino123" >> .env
             echo "DB_NAME=AuthServices" >> .env
             echo "DB_PORT=3306" >> .env
             echo "JWT_SECRET=JWT123" >> .env
-            echo "PORT=8000" >> .env
 
+            
             sudo docker pull ksrobalino/microservicio-auth-owners:latest
+            sudo docker pull ksrobalino/microservicio-auth-students:latest
 
+            
             sudo docker run -d --name microservicio-auth-owners --env-file .env -p 8000:8000 ksrobalino/microservicio-auth-owners:latest
+            sudo docker run -d --name microservicio-auth-students --env-file .env -p 5020:5020 ksrobalino/microservicio-auth-students:latest
